Add wellness programs and user registration functionality
- Created a new JavaScript file `programs-data.js` containing structured data for various wellness programs, including tasks and descriptions.
- Developed `programs.html` to display available programs, allowing users to start or continue their selected program.
- Implemented `register.html` for user registration, including form validation and local storage management for user data.
- Added a new CSS file `styles.css` for consistent styling across the application, enhancing the UI/UX.
- Introduced a simple PHP router `router.php` to handle requests and serve the appropriate HTML files, improving navigation within the application.

--- a/pages/landing.html
+++ b/pages/landing.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HealNest - Youth Empowerment Platform</title>
-    <link rel="shortcut icon" type="image/png" href="calm_clarity/assets/images/logos/favicon.png" />
-    <link rel="stylesheet" href="calm_clarity/assets/css/styles.min.css" />
+    <title>HealNest - Mental Wellness for Students</title>
+    <link rel="shortcut icon" type="image/png" href="../calm_clarity/assets/images/logos/favicon.png" />
+    <link rel="stylesheet" href="../calm_clarity/assets/css/styles.min.css" />
+    <link rel="stylesheet" href="../css/main.css" />
     <style>
         :root {
             --primary-gradient: linear-gradient(135deg, #5D87FF 0%, #49BEFF 100%);
@@ -664,8 +665,9 @@
         </div>
     </section>
 
-    <script src="calm_clarity/assets/libs/jquery/dist/jquery.min.js"></script>
-    <script src="calm_clarity/assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../calm_clarity/assets/libs/jquery/dist/jquery.min.js"></script>
+    <script src="../calm_clarity/assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/main.js"></script>
 
     <script>
         // Smooth scrolling for navigation
