--- a/pages/assessment.html
+++ b/pages/assessment.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HealNest - Mental Health Assessment</title>
-    <link rel="shortcut icon" type="image/png" href="calm_clarity/assets/images/logos/favicon.png" />
-    <link rel="stylesheet" href="calm_clarity/assets/css/styles.min.css" />
+    <link rel="shortcut icon" type="image/png" href="../calm_clarity/assets/images/logos/favicon.png" />
+    <link rel="stylesheet" href="../calm_clarity/assets/css/styles.min.css" />
+    <link rel="stylesheet" href="../css/main.css" />
 </head>
 
 <body>
@@ -203,10 +204,11 @@
         </div>
     </div>
 
-    <script src="calm_clarity/assets/libs/jquery/dist/jquery.min.js"></script>
-    <script src="calm_clarity/assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="calm_clarity/assets/js/sidebarmenu.js"></script>
-    <script src="calm_clarity/assets/js/app.min.js"></script>
+    <script src="../calm_clarity/assets/libs/jquery/dist/jquery.min.js"></script>
+    <script src="../calm_clarity/assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../calm_clarity/assets/js/sidebarmenu.js"></script>
+    <script src="../calm_clarity/assets/js/app.min.js"></script>
+    <script src="../js/main.js"></script>
 
     <script>
         function calculateResults() {
