feat(dashboard): Implement complete dashboard system with API and UI components
- Add comprehensive dashboard API endpoints for user data, stats, and task management
- Implement mood tracking system with database persistence and UI components
- Create assessment, journal, and profile management modules with full CRUD operations
- Add program management API and frontend integration for wellness programs
- Implement task completion tracking with streak calculation logic
- Convert all HTML pages to PHP with session authentication and dynamic content
- Add admin panel and API for user management and testing utilities
- Create comprehensive CSS styling for all dashboard modules and responsive design
- Implement JavaScript utilities for authentication, task management, and data handling
- Add database schema updates with demo user data and realistic test scenarios
- Fix critical API errors including duplicate function definitions and field mismatches
- Add VSCode settings and documentation for dashboard status and testing instructions
- Implement logout functionality with proper session cleanup
- Add multiple test files and utilities for API validation and debugging
This commit completes the core dashboard infrastructure, enabling users to authenticate, view personalized programs, track daily tasks, log mood entries, and monitor their wellness progress with real-time streak calculations.

--- a/pages/landing.html
+++ b/pages/landing.html
@@ -382,8 +382,8 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="auth-buttons">
-                <a href="./login.html" class="btn btn-outline">Sign In</a>
-                <a href="./register.html" class="btn btn-primary">Get Started</a>
+                <a href="./login.php" class="btn btn-outline">Sign In</a>
+                <a href="./register.php" class="btn btn-primary">Get Started</a>
             </div>
         </nav>
     </header>
@@ -395,8 +395,8 @@
                 <h1>Your Mental Wellness Journey Starts Here</h1>
                 <p>HealNest is your personal mental health companion. Take assessments, get personalized programs, track your mood, and build healthy habits for a better you.</p>
                 <div class="hero-buttons">
-                    <a href="./register.html" class="btn btn-primary">Start Your Journey</a>
-                    <a href="./login.html" class="btn btn-outline">Sign In</a>
+                    <a href="./register.php" class="btn btn-primary">Start Your Journey</a>
+                    <a href="./login.php" class="btn btn-outline">Sign In</a>
                 </div>
             </div>
             <div class="hero-visual">
@@ -452,7 +452,7 @@
         <div class="container">
             <h2>Ready to Transform Your Mental Health?</h2>
             <p>Join thousands of users who have improved their mental wellness with HealNest</p>
-            <a href="./register.html" class="btn btn-outline" style="background: white; color: #5D87FF;">Start Free Today</a>
+            <a href="./register.php" class="btn btn-outline" style="background: white; color: #5D87FF;">Start Free Today</a>
         </div>
     </section>
 
