chore: Clean up temporary test files and reorganize project structure
- Remove temporary debugging scripts (check_completions.php, fix_completion.php, test_*.php files)
- Delete obsolete DASHBOARD_STATUS.md documentation file
- Reorganize landing page from pages/landing.html to root index.html
- Update authentication page links to reflect new file structure
- Refactor JavaScript modules (dashboard.js, profile.js, program.js, tasks.js) for improved organization
- Update PHP authentication and page files for consistency
- Remove test HTML files used during development phase
- Consolidate project structure for production readiness

--- a/index.html
+++ b/index.html
@@ -382,8 +382,8 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="auth-buttons">
-                <a href="./login.php" class="btn btn-outline">Sign In</a>
-                <a href="./register.php" class="btn btn-primary">Get Started</a>
+                <a href="./pages/login.php" class="btn btn-outline">Sign In</a>
+                <a href="./pages/register.php" class="btn btn-primary">Get Started</a>
             </div>
         </nav>
     </header>
